replace Material icons with Font Awesome icons

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -36,9 +36,8 @@
       (MIT)</p>
   </mat-list-item>
   <mat-list-item>
-    <h4 mat-line class="bold">Material design icons</h4>
-    <p mat-line><a target="_blank" href="https://material.io/icons/">https://material.io/icons/</a> (Apache License
-      Version 2.0)</p>
+    <h4 mat-line class="bold">Font Awesome Free</h4>
+    <p mat-line><a target="_blank" href="https://fontawesome.com/">https://fontawesome.com/</a></p>
   </mat-list-item>
   <mat-list-item>
     <h4 mat-line class="bold">ngx-clipboard</h4>
