--- a/src/app/components/requirements/requirements.component.html
+++ b/src/app/components/requirements/requirements.component.html
@@ -44,7 +44,7 @@
       </div>
       <mat-action-row>
         <button mat-raised-button color="primary" (click)="deleteRequirement(skilltree, i)">
-          <mat-icon svgIcon="delete">delete</mat-icon>
+          <fa-icon icon="trash"></fa-icon>
           {{ 'COMPONENTS__SKILLTREE_REQUIREMENTS__DELETE' | translate }}
         </button>
       </mat-action-row>
