--- a/src/app/components/skills/control-skill/control-skill.component.html
+++ b/src/app/components/skills/control-skill/control-skill.component.html
@@ -20,7 +20,7 @@
         {{ 'COMPONENTS__SKILLS__EDIT' | translate }}
       </button>
       <button mat-button color="warn" (click)="deleteRule(skilltree, upgrade)">
-        <mat-icon svgIcon="delete">delete</mat-icon>
+        <fa-icon icon="trash"></fa-icon>
         {{ 'COMPONENTS__SKILLS__DELETE' | translate }}
       </button>
     </mat-action-row>
