--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -58,7 +58,7 @@
           </mat-error>
         </mat-form-field>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="speedPopover">
-          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+          <fa-icon icon="info-circle"></fa-icon>
         </button>
       </mat-card>
       <mat-card>
@@ -75,7 +75,7 @@
           </mat-error>
         </mat-form-field>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="jumpHeightPopover">
-          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+          <fa-icon icon="info-circle"></fa-icon>
         </button>
       </mat-card>
       <mat-card>
@@ -101,7 +101,7 @@
           </mat-error>
         </mat-form-field>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="flyLimitPopover">
-          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+          <fa-icon icon="info-circle"></fa-icon>
         </button>
       </mat-card>
       <mat-card>
@@ -118,7 +118,7 @@
           </mat-error>
         </mat-form-field>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="flyRegenRatePopover">
-          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+          <fa-icon icon="info-circle"></fa-icon>
         </button>
       </mat-card>
     </div>
@@ -127,7 +127,7 @@
         {{ 'COMPONENTS__SKILLS__EDIT' | translate }}
       </button>
       <button mat-button color="warn" (click)="deleteRule(skilltree, upgrade)">
-        <mat-icon svgIcon="delete">delete</mat-icon>
+        <fa-icon icon="trash"></fa-icon>
         {{ 'COMPONENTS__SKILLS__DELETE' | translate }}
       </button>
     </mat-action-row>
