--- a/src/app/components/skilltree-properties/skilltree-properties.component.html
+++ b/src/app/components/skilltree-properties/skilltree-properties.component.html
@@ -73,7 +73,7 @@
              pattern="\d*">
       <span matSuffix>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="weightPopover">
-            <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+            <fa-icon icon="info-circle"></fa-icon>
           </button>
       </span>
       <mat-error *ngIf="weight.errors?.pattern">
