--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -25,7 +25,7 @@
             </mat-error>
           </mat-form-field>
           <button mat-icon-button [stcDynamicPopoverAnchorFor]="rowsPopover">
-            <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+            <fa-icon icon="info-circle"></fa-icon>
           </button>
         </mat-card>
         <mat-card>
@@ -43,7 +43,7 @@
           {{ 'COMPONENTS__SKILLS__EDIT' | translate }}
         </button>
         <button mat-button color="warn" (click)="deleteRule(skilltree, upgrade)">
-          <mat-icon svgIcon="delete">delete</mat-icon>
+          <fa-icon icon="trash"></fa-icon>
           {{ 'COMPONENTS__SKILLS__DELETE' | translate }}
         </button>
       </mat-action-row>
