--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -41,7 +41,7 @@
           </mat-error>
         </mat-form-field>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="damagePopover">
-          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+          <fa-icon icon="info-circle"></fa-icon>
         </button>
       </mat-card>
       <mat-card>
@@ -58,7 +58,7 @@
           </mat-error>
         </mat-form-field>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="ratePopover">
-          <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+          <fa-icon icon="info-circle"></fa-icon>
         </button>
       </mat-card>
       <mat-card>
@@ -111,7 +111,7 @@
         {{ 'COMPONENTS__SKILLS__EDIT' | translate }}
       </button>
       <button mat-button color="warn" (click)="deleteRule(skilltree, upgrade)">
-        <mat-icon svgIcon="delete">delete</mat-icon>
+        <fa-icon icon="trash"></fa-icon>
         {{ 'COMPONENTS__SKILLS__DELETE' | translate }}
       </button>
     </mat-action-row>
