--- a/src/app/components/skilltree-creator/skilltree-creator.component.html
+++ b/src/app/components/skilltree-creator/skilltree-creator.component.html
@@ -1,35 +1,34 @@
 <mat-sidenav-container (backdropClick)="closeSidenav()">
-  <mat-sidenav #sidenav class="sidenav"
-               [opened]="showSidenav$ | async"
+  <mat-sidenav [opened]="showSidenav$ | async"
                [disableClose]="true">
-    <div style="width: 100%; height: 100%"
-         fxLayout="column"
-         fxLayoutAlign="start center">
+    <div fxLayout="column"
+         fxLayoutAlign="start center"
+         class="sidenav">
       <button mat-icon-button (click)="importSkilltree()" matTooltipPosition="right"
               [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__IMPORT' | translate">
-        <mat-icon svgIcon="input">input</mat-icon>
+        <fa-icon icon="file-import"></fa-icon>
       </button>
       <button mat-icon-button routerLink="/import/legacy" (click)="closeSidenav()" matTooltipPosition="right"
               [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__IMPORT_LEGACY' | translate">
-        <mat-icon svgIcon="input">input</mat-icon>
+        <fa-icon icon="file-import"></fa-icon>
       </button>
       <button mat-icon-button (click)="closeSidenav()" matTooltipPosition="right" disabled
               [matTooltip]="'COMPONENTS__NOT_YET_IMPLEMENTED' | translate">
-        <mat-icon svgIcon="cloud_upload">cloud upload</mat-icon>
+        <fa-icon icon="cloud-upload-alt"></fa-icon>
       </button>
       <button *ngIf="language$ | async as lang" mat-icon-button (click)="toggleLang(lang)" matTooltipPosition="right"
               [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__CHANGE_LANGUAGE' | translate"
               [disabled]="languages.length <= 1">
-        <mat-icon svgIcon="translate">translate</mat-icon>
-      </button>
-      <button mat-icon-button routerLink="/about" (click)="closeSidenav()" matTooltipPosition="right"
-              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__ABOUT' | translate">
-        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+        <fa-icon icon="language"></fa-icon>
       </button>
       <span class="fill-remaining-space"></span>
+      <button mat-icon-button routerLink="/about" (click)="closeSidenav()" matTooltipPosition="right"
+              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__ABOUT' | translate">
+        <fa-icon icon="info"></fa-icon>
+      </button>
       <button mat-icon-button (click)="close()" matTooltipPosition="right"
               [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__CLOSE' | translate">
-        <mat-icon svgIcon="exit_to_app">exit_to_app</mat-icon>
+        <fa-icon icon="door-open"></fa-icon>
       </button>
     </div>
   </mat-sidenav>
@@ -39,34 +38,34 @@
             class="toolbar-button"
             *ngIf="isRootPath"
             [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__MENU' | translate">
-      <mat-icon svgIcon="menu">menu</mat-icon>
+      <fa-icon icon="bars"></fa-icon>
     </button>
     <button mat-button
             (click)="back()"
             class="toolbar-button"
             *ngIf="!isRootPath"
             [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__BACK' | translate">
-      <mat-icon svgIcon="arrow_back">arrow_back</mat-icon>
+      <fa-icon icon="arrow-left"></fa-icon>
     </button>
     <button mat-button
             (click)="save()"
             class="toolbar-button"
             [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__SAVE' | translate">
-      <mat-icon svgIcon="save">save</mat-icon>
+      <fa-icon icon="save"></fa-icon>
     </button>
     <button mat-button
             (click)="undo()"
             class="toolbar-button"
             [disabled]="(pastStates$ | async).length <= 0"
             [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__UNDO' | translate">
-      <mat-icon svgIcon="undo">undo</mat-icon>
+      <fa-icon icon="undo"></fa-icon>
     </button>
     <button mat-button
             (click)="redo()"
             class="toolbar-button"
             [disabled]="(futureStates$ | async).length <= 0"
             [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__REDO' | translate">
-      <mat-icon svgIcon="redo">redo</mat-icon>
+      <fa-icon icon="redo"></fa-icon>
     </button>
   </div>
   <mat-card>
