--- a/src/app/components/skilltree-creator/skilltree-creator.component.scss
+++ b/src/app/components/skilltree-creator/skilltree-creator.component.scss
@@ -1,6 +1,8 @@
 .sidenav {
-  padding: 10px;
-  width: 60px;
+  height: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 70px;
 }
 
 .top-toolbar {
