--- a/src/app/components/skilltree-list/skilltree-list.component.scss
+++ b/src/app/components/skilltree-list/skilltree-list.component.scss
@@ -13,6 +13,11 @@
   padding-bottom: 0 !important;
   padding-top: 0 !important;
   background-color: whitesmoke;
+
+  ::ng-deep svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .cdk-drop-dragging, .cdk-drag, .draggable-item, .cdk-drag-animating {
