--- a/src/app/components/skilltree-editor/skilltree-editor.component.html
+++ b/src/app/components/skilltree-editor/skilltree-editor.component.html
@@ -1,20 +1,20 @@
 <nav mat-tab-nav-bar>
-  <a mat-tab-link [active]="(tab$ | async) == 0" (click)="switchTab(0)">
+  <a mat-tab-link [active]="(tab$ | async) === Tab.SkillEditor" (click)="switchTab(Tab.SkillEditor)">
     {{ 'COMPONENTS__SKILLTREE_EDITOR__SKILL_EDITOR' | translate}}
   </a>
-  <a mat-tab-link [active]="(tab$ | async) == 1" (click)="switchTab(1)">
+  <a mat-tab-link [active]="(tab$ | async) === Tab.Properties" (click)="switchTab(Tab.Properties)">
     {{ 'COMPONENTS__SKILLTREE_EDITOR__PROPERTIES' | translate}}
   </a>
-  <a mat-tab-link [active]="(tab$ | async) == 2" (click)="switchTab(2)">
+  <a mat-tab-link [active]="(tab$ | async) === Tab.Requirements" (click)="switchTab(Tab.Requirements)">
     {{ 'COMPONENTS__SKILLTREE_EDITOR__REQUIREMENTS' | translate}}
   </a>
-  <a mat-tab-link [active]="(tab$ | async) == 3" (click)="switchTab(3)">
+  <a mat-tab-link [active]="(tab$ | async) === Tab.Notifications" (click)="switchTab(Tab.Notifications)">
     {{ 'COMPONENTS__SKILLTREE_EDITOR__LEVELUP_NOTIFICATIONS' | translate}}
   </a>
 </nav>
 
-<stc-skill-editor *ngIf="(tab$ | async) == 0"></stc-skill-editor>
-<stc-skilltree-properties *ngIf="(tab$ | async) == 1"></stc-skilltree-properties>
-<stc-requirements *ngIf="(tab$ | async) == 2"></stc-requirements>
-<stc-levelup-notifications *ngIf="(tab$ | async) == 3"></stc-levelup-notifications>
+<stc-skill-editor *ngIf="(tab$ | async) == Tab.SkillEditor"></stc-skill-editor>
+<stc-skilltree-properties *ngIf="(tab$ | async) == Tab.Properties"></stc-skilltree-properties>
+<stc-requirements *ngIf="(tab$ | async) == Tab.Requirements"></stc-requirements>
+<stc-levelup-notifications *ngIf="(tab$ | async) == Tab.Notifications"></stc-levelup-notifications>
 
