--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,59 +14,90 @@
 <mat-list role="list">
   <mat-list-item>
     <h4 mat-line class="bold">Angular</h4>
-    <p mat-line><a target="_blank" href="https://angular.io">https://angular.io</a> (MIT)</p>
-  </mat-list-item>
-  <mat-list-item>
-    <h4 mat-line class="bold">Angular Material</h4>
-    <p mat-line><a target="_blank" href="https://material.angular.io/">https://material.angular.io/</a> (MIT)</p>
-  </mat-list-item>
-  <mat-list-item>
-    <h4 mat-line class="bold">Popover Component for Angular</h4>
-    <p mat-line><a target="_blank"
-                   href="https://github.com/ncstate-sat/popover">https://github.com/ncstate-sat/popover</a> (MIT)</p>
-  </mat-list-item>
-  <mat-list-item>
-    <h4 mat-line class="bold">ngrx</h4>
-    <p mat-line><a target="_blank" href="https://github.com/ngrx/platform">https://github.com/ngrx/platform</a> (MIT)
-    </p>
-  </mat-list-item>
-  <mat-list-item>
-    <h4 mat-line class="bold">ngx-contextmenu</h4>
-    <p mat-line><a target="_blank" href="https://github.com/isaacplmann/ngx-contextmenu">https://github.com/isaacplmann/ngx-contextmenu</a>
-      (MIT)</p>
-  </mat-list-item>
-  <mat-list-item>
-    <h4 mat-line class="bold">Font Awesome Free</h4>
-    <p mat-line><a target="_blank" href="https://fontawesome.com/">https://fontawesome.com/</a></p>
-  </mat-list-item>
-  <mat-list-item>
-    <h4 mat-line class="bold">ngx-clipboard</h4>
-    <p mat-line><a target="_blank" href="https://maxisam.github.io/ngx-clipboard/">https://maxisam.github.io/ngx-clipboard/</a>
+    <p mat-line>
+      <a target="_blank" href="https://angular.io">
+        https://angular.io
+      </a>
       (MIT)
     </p>
   </mat-list-item>
   <mat-list-item>
-    <h4 mat-line class="bold">ngx-auto-unsubscribe</h4>
-    <p mat-line><a target="_blank" href="https://github.com/NetanelBasal/ngx-auto-unsubscribe">https://github.com/NetanelBasal/ngx-auto-unsubscribe</a>
+    <h4 mat-line class="bold">Angular Material</h4>
+    <p mat-line>
+      <a target="_blank" href="https://material.angular.io/">
+        https://material.angular.io/
+      </a>
+      (MIT)
+    </p>
+  </mat-list-item>
+  <mat-list-item>
+    <h4 mat-line class="bold">Popover Component for Angular</h4>
+    <p mat-line>
+      <a target="_blank" href="https://github.com/ncstate-sat/popover">
+        https://github.com/ncstate-sat/popover
+      </a>
+      (MIT)
+    </p>
+  </mat-list-item>
+  <mat-list-item>
+    <h4 mat-line class="bold">Akita</h4>
+    <p mat-line>
+      <a target="_blank" href="https://github.com/datorama/akita">
+        https://github.com/datorama/akita
+      </a>
+      (Apache License 2.0)
+    </p>
+  </mat-list-item>
+  <mat-list-item>
+    <h4 mat-line class="bold">ngx-contextmenu</h4>
+    <p mat-line>
+      <a target="_blank" href="https://github.com/isaacplmann/ngx-contextmenu">
+        https://github.com/isaacplmann/ngx-contextmenu
+      </a>
+      (MIT)
+    </p>
+  </mat-list-item>
+  <mat-list-item>
+    <h4 mat-line class="bold">Font Awesome Free</h4>
+    <p mat-line>
+      <a target="_blank" href="https://fontawesome.com/">
+        https://fontawesome.com/
+      </a>
+    </p>
+  </mat-list-item>
+  <mat-list-item>
+    <h4 mat-line class="bold">ngx-clipboard</h4>
+    <p mat-line>
+      <a target="_blank" href="https://maxisam.github.io/ngx-clipboard/">
+        https://maxisam.github.io/ngx-clipboard/
+      </a>
       (MIT)
     </p>
   </mat-list-item>
   <mat-list-item>
     <h4 mat-line class="bold">ngx-translate</h4>
-    <p mat-line><a target="_blank"
-                   href="https://github.com/ngx-translate/core">https://github.com/ngx-translate/core</a>
+    <p mat-line>
+      <a target="_blank" href="https://github.com/ngx-translate/core">
+        https://github.com/ngx-translate/core
+      </a>
       (MIT)
     </p>
   </mat-list-item>
   <mat-list-item>
     <h4 mat-line class="bold">angular2-hotkeys</h4>
-    <p mat-line><a target="_blank" href="https://github.com/brtnshrdr/angular2-hotkeys">https://github.com/brtnshrdr/angular2-hotkeys</a>
+    <p mat-line>
+      <a target="_blank" href="https://github.com/brtnshrdr/angular2-hotkeys">
+        https://github.com/brtnshrdr/angular2-hotkeys
+      </a>
       (MIT)
     </p>
   </mat-list-item>
   <mat-list-item>
     <h4 mat-line class="bold">NBT.js</h4>
-    <p mat-line><a target="_blank" href="https://github.com/sjmulder/nbt-js">https://github.com/sjmulder/nbt-js</a>
+    <p mat-line>
+      <a target="_blank" href="https://github.com/sjmulder/nbt-js">
+        https://github.com/sjmulder/nbt-js
+      </a>
       (<a target="_blank" href="https://raw.githubusercontent.com/sjmulder/nbt-js/master/License.md">Licence</a>)
     </p>
   </mat-list-item>
